home section done

--- a/index.html
+++ b/index.html
@@ -50,18 +50,36 @@
             </div>
         </header>
 
-
-
-
-
-
-
-
-
-
-
     <!-- header section ends  -->
+        <!-- home section starts  -->
 
+        <section class="home" id="home">
+            <div class="container">
+
+                <div class="row min-vh-100 align-items-center text-center text-md-left">
+
+                    <div class="col-md-6 pr-md-5">
+                        <img src="images/bg.svg" width="100%" alt="bg image">
+                    </div>
+
+                    <div class="col-md-6 pl-md-5 content">
+                        <h1><span>Stay </span>safe , <span>Stay </span>healthy.</h1>
+                        <h3>caring for you</h3>
+                        <a href="#"><button class="button">learn more</button></a>
+
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+
+
+
+
+
+
+        <!-- home section ends  -->
 
 
 
