--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.2/css/bootstrap.min.css">
 
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
+
+
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
 
@@ -74,15 +77,50 @@
         </section>
 
 
-
-
-
-
-
         <!-- home section ends  -->
 
+        <!-- about section starts  -->
+
+        <section class="about" id="about">
+
+            <div class="container">
+
+                <div class="row min-vh-100 align-items-center">
+
+                    <div class="col-md-6 content">
+
+                        <div class="box">
+                            <h3> <i class="fas fa-ambulance"></i> ambulance services</h3>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam, id?</p>
+                        </div>
+
+                        <div class="box">
+                            <h3> <i class="fas fa-procedures"></i> emergency rooms</h3>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam, id?</p>
+                        </div>
+
+                        <div class="box">
+                            <h3> <i class="fas fa-stethoscope"></i> free check-ups</h3>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam, id?</p>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6 d-none d-md-block">
+                        <img src="images/about.png" width="100%" alt="about section">
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
 
 
+
+
+
+
+        <!-- about section emds  -->
 
 
 
@@ -90,7 +128,8 @@
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.2/js/bootstrap.min.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+    <script src="https://unpkg.com/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
 
 
     <!-- jquery cdn link  -->
